@startuml

skinparam class {
  backgroundColor pink
  arrowColor firebrick
  borderColor firebrick
}

interface Strategy {
  chooseLineup(players: string[]): string[]
}

class Team <PRE> {
  - strategy: Strategy
  constructor(strategy: Strategy)
  + setStrategy(strategy: Strategy): void
  + prepareLineup(): string[]
}

class DefensiveStrategy <XOR> {
  + chooseLineup(players: string[]): string[]
}

class OffensiveStrategy <XOR> {
  + chooseLineup(players: string[]): string[]
}

Team o-> Strategy

Strategy <|.. DefensiveStrategy
Strategy <|.. OffensiveStrategy

@enduml

' prepareLineup() may be client logic
' prepareLineup() can have parameters which are input data for concrete strategies
